OneDrive/Documents/Eashu/Deveops/Documents/Documents prepared by eashuu/Terraform/Terraform_Module_project/Module/security_group/main.tf
resource "aws_security_group" "test-sg" {
  description = "allow http , https and shh"
  vpc_id = var.vpc_id
  name = var.security_name

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
